--- a/_sass/themes/_light.scss
+++ b/_sass/themes/_light.scss
@@ -40,7 +40,7 @@
    white 0%,
    white 100%
  );
- --sidebar-border-color: white;
+ --sidebar-border-color: rgb(187, 187, 187);
  --sidebar-muted-color: black;
  --sidebar-active-color: #1d1d1d;
  --sidebar-hover-bg: rgba(223, 233, 241, 0.64);
